--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<link rel="stylesheet" type="text/css" href="https://.github.io/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Assignment module 2</title>
 
+</head>
+<body>
+    <h1 style="color:black ; font-size: x-large; text-align: center;font-family: cursive;">Our Menu</h1>
+    <div class="row">
+        <div class="col">
+            <div class="content">
+                <div class="label Astronomy">Astronomy</div>
+                <p>Astronomy is the study of celestial objects such as planets, the moons, galaxies and stars.
+                     Astronomy comes from the Greek word, Astronomos which means star-arranging. Astronomy also deals with outer space, 
+                     universe and the motion of the celestial objects. </p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="content">
+                <div class="label Relativity">Relativity</div>
+                <p>The theory of relativity is the study of motion of particle in which relative to the observer in different reference frame. 
+                    Relativity is categorized into two, special theory of relativity and general theory of relativity, both developed by Albert Einstein from 1905 to 1907 . </p>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="content">
+                <div class="label Quantum">Quantum Mechanics</div>
+                <p>Quantum mechanics is the study of subatomic particles in which the states of the particle described by wavefunction, psi is a superpositon of various possible
+                    outcomes. The wavefunction itself has no physical meaning but the absolute square is, which tells you the probability at the particular measured state of the
+                    particle.  </p>
+            </div>
+        </div>
+    </div>
+    
+</body>
+</html>
