--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="https://.github.io/style.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Assignment module 2</title>
-
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1 style="color:black ; font-size: x-large; text-align: center;font-family: cursive;">Our Menu</h1>
